# Turing-tensor-midi

./: AGENT.md  Hacktoberfest_Contributing.md  LICENSE  LLM_integration_try.py  README.md  app.js  index.html  style.css
.github/workflows/: ci.yml
Turing_Project/: .env  .env.example  .gitignore  App.py  Non_AI_version.py  README.md  Turing-Non_AI_version.py  pyproject.toml  requirements.txt
Turing_Project/config/: default.yaml  sites.yaml
Turing_Project/tests/: test_band.py  test_config.py  test_router.py  test_sites.py  test_skills.py  test_tminus.py
Turing_Project/turing/: __init__.py  __main__.py  config.py  listener.py  router.py  sites.py
Turing_Project/turing/band/: __init__.py  agent.py  ensemble.py  protocol.py  tminus.py
Turing_Project/turing/engine/: __init__.py  ai.py  completion.py  speech.py  tts.py
Turing_Project/turing/midi/: __init__.py  listener.py  synth.py  tensor_map.py
Turing_Project/turing/skills/: __init__.py  band.py  music.py  news.py  system.py  weather.py  web.py
