[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turing"
version = "2.0.0"
description = "Voice assistant for the SuperInstance ecosystem — z.ai + DeepInfra, Self-Improving Band, MIDI tensors"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "SuperInstance"}]
keywords = ["voice-assistant", "ai", "midi", "tensor", "band"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.11",
    "pywhatkit>=5.4",
    "newsapi-python>=0.2.7",
    "geopy>=2.3",
]

[project.optional-dependencies]
midi = ["mido>=1.3"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]
all = ["turing[midi,dev]"]

[project.scripts]
turing = "turing.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["turing*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["turing", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
